style: Change the display language to English

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="最優質豐富的課程網站" />
-    <title>MERN Online Course</title>
+    <meta
+      name="description"
+      content="Provide the most diverse and high-quality online courses."
+    />
+    <title>MERN Online Courses</title>
     <meta name="author" content="BrianLYT" />
     <!-- CSS -->
     <link
